--- a/web/fx/css/onscreen.css
+++ b/web/fx/css/onscreen.css
@@ -15,3 +15,13 @@ footer {
     border-top: 1px solid #e5e5e5;
     background-color: #f5f5f5;
 }
+
+.screen {
+    float: left;
+}
+.screen {
+    margin-left: 40px;
+}
+.screen.active {
+    margin-left: 0;
+}
