--- a/web/fx/css/onscreen.css
+++ b/web/fx/css/onscreen.css
@@ -7,6 +7,7 @@ header {
     text-shadow: 0 -1px 0 rgba(0, 0, 0, 0.25);
     border-color: #252525;
     text-align: right;
+    margin-bottom: 5px;
 }
 footer {
     text-align: center;
@@ -14,6 +15,14 @@ footer {
     margin-top: 10px;
     border-top: 1px solid #e5e5e5;
     background-color: #f5f5f5;
+}
+
+.table caption {
+    text-align: left;
+}
+
+.table td.center {
+    text-align: center;
 }
 
 .screen {
@@ -24,4 +33,16 @@ footer {
 }
 .screen.active {
     margin-left: 0;
+}
+
+.table .actions a {
+    padding-right: 5px;
+}
+
+.table td .icon-ok {
+    color: green;
+}
+
+.table td .icon-remove {
+    color: red;
 }
